Wed Feb 29 10:33:28 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Wed Feb 29 10:25:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/matchspy.h,include/xapian/postingsource.h,
	  include/xapian/weight.h: Document that you can define a static
	  operator delete method in your subclass if deallocation needs to be
	  handled specially.  (Closes ticket#554)

Mon Jan 23 12:39:44 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sun Jan 22 06:21:08 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* net/remoteconnection.cc: Include "safesysstat.h" for fstat().

Sat Jan 21 14:40:04 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony: Fix FLAG_AUTO_SYNONYMS not to enable
	  auto multi-word synonyms too (but in a different way to trunk so as
	  to not break the ABI).
	* tests/queryparsertest.cc: Extend testcase qp_synonym1 to include a
	  regression test for this bug.

Sat Jan 21 14:24:45 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/safesysstat.h: The S_ISDIR and S_ISREG macros for MSVC are
	  unlikely to work on other platforms (_S_IFMT vs S_IFMT, etc) so
	  split them.  Tweak a few comments.

Sat Jan 21 14:19:35 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_db.cc,tests/harness/backendmanager.cc: Add missing
	  explicit header includes, uncovered by compiling with STLport.

Sat Jan 21 14:13:11 GMT 2012  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* INSTALL,configure.ac,m4/rjb_find_stlport.m4,xapian-config.in: Remove
	  configure's --with-stlport and --with-stlport-compiler options, as
	  they don't allow you to actually specify what you need (at least to
	  use the Debian STLport package), and instead document what to pass
	  to configure to enable building with STLport (though it seems to no